--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ h2 {
 	margin:0;
 }
 a {
-	text-decoration:none;
+	text-decoration:none;color:black;
 }
 table {
 	border-collapse:collapse;
@@ -87,12 +87,12 @@ Voici quelques documents que j'ai rédigé :
 <a href="cv.pdf" title="Cliquez ici pour quelque chose de plus clair !">CV</a><br>
 <a href="img/id.jpg"><img class="photo" src="img/id.jpg" alt="id" width=300></a>
 <br>
-<a href="https://github.com/simonmasson"><img width=100 src="img/logo_github.png"/></a>
-<a href="public_key_simon_masson.asc"><img width=100 src="img/logo_gpg.png"/></a>
-<a href="https://fr.linkedin.com/in/simon-masson-74837889"><img width=100 src="img/logo_linkedin.png"/></a>
-<a href="https://www.instagram.com/soimnmssaon/"><img width=100 src="img/logo_instagram.png"/></a>
-<a href="https://www.facebook.com/soimn.mssaon"><img width=100 src="img/logo_facebook.png"/></a>
-<a href="https://twitter.com/soimnmssaon"><img width=100 src="img/logo_twitter.png"/></a>
+<a href="https://github.com/simonmasson"><img width=80 src="img/logo_github.png"/></a>
+<a href="public_key_simon_masson.asc"><img width=80 src="img/logo_gpg.png"/></a>
+<a href="https://fr.linkedin.com/in/simon-masson-74837889"><img width=80 src="img/logo_linkedin.png"/></a>
+<a href="https://www.instagram.com/soimnmssaon/"><img width=80 src="img/logo_instagram.png"/></a>
+<a href="https://www.facebook.com/soimn.mssaon"><img width=80 src="img/logo_facebook.png"/></a>
+<a href="https://twitter.com/soimnmssaon"><img width=80 src="img/logo_twitter.png"/></a>
 
 
 
@@ -105,22 +105,22 @@ Voici quelques documents que j'ai rédigé :
 <h2>Précédemment</h2>
 <br>
 
-<table class="infos" style="border:1px black solid;"><tr><td><a href="http://www.departement.math.uvsq.fr/master2AA" style="color:black;">M2R Algèbre appliqué</a><br><img style="width:70%;" src="img/saclay.jpg" alt="saclay"/></td></tr></table>
+<table class="infos" style="border:1px black solid;"><tr><td><a href="http://www.departement.math.uvsq.fr/master2AA" style="color:black;">M2R Algèbre appliquée</a><br><a href="https://www.universite-paris-saclay.fr/" ><img style="width:70%;" src="img/saclay.jpg" alt="saclay"/></a></td></tr></table>
 <table style="border:1px black solid;" class="infos"><tr><td>Agrégation externe de Mathématiques<br><span style="font-size:.5em;">Option algèbre et calcul formel</span><br><img alt="educnat" style="width:60%;" src="img/mineduc.png"/><br>Rang : 92</td></tr></table>
-<table style="border:1px black solid;" class="infos"><tr><td><a href="https://etudes.univ-rennes1.fr/master-mathematiques/master1/mathfonda" style="color:black;">Master 1<br> Mathématiques<br> fondamentales</a><br><a href="https://www.univ-rennes1.fr/"><img style="width:25%;" src="img/ur1.png" alt="ur1" width=300><br>Université de Rennes 1</a></td></tr></table>
-<table style="border:1px black solid;" class="infos"><tr><td><a href="https://etudes.univ-rennes1.fr/licence-mathematiques/themes/L3" style="color:black;">Licence<br> de<br> Mathématiques</a><br><a href="https://www.univ-rennes1.fr/"><img style="width:25%;" src="img/ur1.png" alt="ur1" width=300><br>Université de Rennes 1</a></td></tr></table>
+<table style="border:1px black solid;" class="infos"><tr><td><a href="https://etudes.univ-rennes1.fr/master-mathematiques/master1/mathfonda" style="color:black;">Master 1<br> Mathématiques<br> fondamentales</a><br><a style="color:rgb(152,0,38);" href="https://www.univ-rennes1.fr/"><img style="width:25%;" src="img/ur1.png" alt="ur1" width=300><br>Université de Rennes 1</a></td></tr></table>
+<table style="border:1px black solid;" class="infos"><tr><td><a href="https://etudes.univ-rennes1.fr/licence-mathematiques/themes/L3" style="color:black;">Licence<br> de<br> Mathématiques</a><br><a style="color:rgb(152,0,38);" href="https://www.univ-rennes1.fr/"><img style="width:25%;" src="img/ur1.png" alt="ur1" width=300><br>Université de Rennes 1</a></td></tr></table>
 
 <hr>
 
 <h2>Documents</h2>
 <br>
 <a href="GLV.pdf"><table class="infos"><tr><td style="border:.2px black solid;">Projet de <b>C</b><br><img alt="gmp" style="width:50%;" src="img/gmp.png"/><br>sur les courbes elliptiques</td></tr></table></a>
-<a href="dev.pdf"><table class="infos"><tr><td style="border:.2px black solid;">Résultats développés pour l'agrégation externe</td></tr></table></a>
-<table class="infos"><tr><td style="border:1px black solid;"><a href="stage_m1.pdf" style="color:black;">Stage de recherche<span style="font-size:.5em;"><br><br>Introduction aux algèbres de Lie</a></span><br>
+<a href="dev.pdf"><table class="infos"><tr><td style="border:.2px black solid;">Résultats développés pour l'agrégation externe<br><img alt="solids" style="width:60%;" src="img/solids.png"</td></tr></table></a>
+<table class="infos"><tr><td style="border:1px black solid;"><a href="stage_m1.pdf">Stage de recherche<span style="font-size:.5em;"><br><br>Introduction aux algèbres de Lie</a></span><br>
 <a href="http://www.unipd.it/"><img style="width:40%;" src="img/up.png" alt="up" width=300></a></td></tr></table>
-<table class="infos"><tr><td style="border:1px black solid;"><a href="ter.pdf" style="color:black;">Travail encadré de recherche</a><br><img alt="hyperbol" style="width:50%;" src="img/ter.png"/><br><span style="font-size:.5em;">Avec
+<table class="infos"><tr><td style="border:1px black solid;"><a href="ter.pdf">Travail encadré de recherche</a><br><img alt="hyperbol" style="width:50%;" src="img/ter.png"/><br><span style="font-size:.5em;">Avec
 <a href="http://perso.jordantremoureux.fr/">Jordan Trémoureux</a></span></td></tr></table>
-<table class="infos"><tr><td style="border:1px black solid;"><a href="stage_l3.pdf" style="color:black;">Stage d'initiation à la recherche<span style="font-size:.5em;"><br><br>Théorème de Gromov et groupes de type fini à croissance linéaire</a></span><br><br><a href="http://www.univ-nantes.fr/" style="color:rgb(41,41,166);"><img alt="nantes" style="width:30%;" src="img/un.png"/></a></td></tr></table>
+<table class="infos"><tr><td style="border:1px black solid;"><a href="stage_l3.pdf">Stage d'initiation à la recherche<span style="font-size:.5em;"><br><br>Théorème de Gromov et groupes de type fini à croissance linéaire</a></span><br><br><a href="http://www.univ-nantes.fr/" style="color:rgb(41,41,166);"><img alt="nantes" style="width:30%;" src="img/un.png"/></a></td></tr></table>
 
 
 
@@ -130,7 +130,7 @@ Voici quelques documents que j'ai rédigé :
 <h2>Photos</h2>
 
 
-<table style="border:1px black solid;" class="infos"><tr><td>Rentrée à l'IHES<br><br><a href="https://www.fondation-hadamard.fr/fr/master-financements-bourses-de-master/appels-candidatures-pour-une-bourse-de-master">Bourse de Master FMJH</a><br><br>09/2017</td></tr></table>
+<table style="border:1px black solid;" class="infos"><tr><td>Rentrée à l'IHES<br><br><a href="https://www.fondation-hadamard.fr/fr/master-financements-bourses-de-master/appels-candidatures-pour-une-bourse-de-master">Bourse FMJH</a><br><br>09/2017</td></tr></table>
 
 <a href="img/ihes.jpg" title="Cliquez pour agrandir"><img class="photo" src="img/ihes.jpg" alt="ihes" width=300></a>
 
