--- a/index.html
+++ b/index.html
@@ -94,18 +94,11 @@ Voici quelques documents que j'ai rédigé :
 <a href="https://www.facebook.com/soimn.mssaon"><img width=80 src="img/logo_facebook.png"/></a>
 <a href="https://twitter.com/soimnmssaon"><img width=80 src="img/logo_twitter.png"/></a>
 
-
-
-<hr>
-<h2>En cours </h2>
-<br>
-<table class="infos" style="border:1px red dashed;"><tr><td><b>Stage de M2</b><br><a href="https://www.thalesgroup.com/en/worldwide/defence/news/thales-communications-security"><img style="width:90%;" alt="thales" src="img/thales.jpg"/></a><br>Méthode GLV en dimension <i>4</i> sur les <b>Q</b>-courbes</td></tr></table>
-
 <hr>
 <h2>Précédemment</h2>
 <br>
 
-<table class="infos" style="border:1px black solid;"><tr><td><a href="http://www.departement.math.uvsq.fr/master2AA" style="color:black;">M2R Algèbre appliquée</a><br><a href="https://www.universite-paris-saclay.fr/" ><img style="width:70%;" src="img/saclay.jpg" alt="saclay"/></a></td></tr></table>
+<table class="infos" style="border:1px black solid;"><tr><td><a href="http://www.departement.math.uvsq.fr/master2AA" style="color:black;">M2R Algèbre appliquée</a><br><a href="https://www.universite-paris-saclay.fr/" ><img style="width:70%;" src="img/saclay.jpg" alt="saclay"/></a><br><br><span style="font-size:.7em;">Mention TB (16.7/20)<br>Classement : 1</span></td></tr></table>
 <table style="border:1px black solid;" class="infos"><tr><td>Agrégation externe de Mathématiques<br><span style="font-size:.5em;">Option algèbre et calcul formel</span><br><img alt="educnat" style="width:60%;" src="img/mineduc.png"/><br>Rang : 92</td></tr></table>
 <table style="border:1px black solid;" class="infos"><tr><td><a href="https://etudes.univ-rennes1.fr/master-mathematiques/master1/mathfonda" style="color:black;">Master 1<br> Mathématiques<br> fondamentales</a><br><a style="color:rgb(152,0,38);" href="https://www.univ-rennes1.fr/"><img style="width:25%;" src="img/ur1.png" alt="ur1" width=300><br>Université de Rennes 1</a></td></tr></table>
 <table style="border:1px black solid;" class="infos"><tr><td><a href="https://etudes.univ-rennes1.fr/licence-mathematiques/themes/L3" style="color:black;">Licence<br> de<br> Mathématiques</a><br><a style="color:rgb(152,0,38);" href="https://www.univ-rennes1.fr/"><img style="width:25%;" src="img/ur1.png" alt="ur1" width=300><br>Université de Rennes 1</a></td></tr></table>
@@ -114,6 +107,7 @@ Voici quelques documents que j'ai rédigé :
 
 <h2>Documents</h2>
 <br>
+<!--<table class="infos" style="border:1px gray dashed;"><tr><td><b>Stage de M2</b><br><a href="https://www.thalesgroup.com/en/worldwide/defence/news/thales-communications-security"><img style="width:90%;" alt="thales" src="img/thales.jpg"/></a><br>Méthode GLV en dimension <i>4</i> sur les <b>Q</b>-courbes</td></tr></table>-->
 <a href="GLV.pdf"><table class="infos"><tr><td style="border:.2px black solid;">Projet de <b>C</b><br><img alt="gmp" style="width:50%;" src="img/gmp.png"/><br>sur les courbes elliptiques</td></tr></table></a>
 <a href="dev.pdf"><table class="infos"><tr><td style="border:.2px black solid;">Résultats développés pour l'agrégation externe<br><img alt="solids" style="width:60%;" src="img/solids.png"</td></tr></table></a>
 <table class="infos"><tr><td style="border:1px black solid;"><a href="stage_m1.pdf">Stage de recherche<span style="font-size:.5em;"><br><br>Introduction aux algèbres de Lie</a></span><br>
