--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@ table tr td {
 img {
 	margin:10px;
 }
+.image {
+	margin : 10px;
+	display:inline-block;
+}
 </style>
 </head>
 
@@ -87,18 +91,18 @@ Voici quelques documents que j'ai rédigé :
 <a href="cv.pdf" title="Cliquez ici pour quelque chose de plus clair !">CV</a><br>
 <a href="img/id.jpg"><img class="photo" src="img/id.jpg" alt="id" width=300></a>
 <br>
-<a href="https://github.com/simonmasson"><img width=80 src="img/logo_github.png"/></a>
-<a href="public_key_simon_masson.asc"><img width=80 src="img/logo_gpg.png"/></a>
-<a href="https://fr.linkedin.com/in/simon-masson-74837889"><img width=80 src="img/logo_linkedin.png"/></a>
-<a href="https://www.instagram.com/soimnmssaon/"><img width=80 src="img/logo_instagram.png"/></a>
-<a href="https://www.facebook.com/soimn.mssaon"><img width=80 src="img/logo_facebook.png"/></a>
-<a href="https://twitter.com/soimnmssaon"><img width=80 src="img/logo_twitter.png"/></a>
+<a href="https://github.com/simonmasson" title="Github"><img width=80 src="img/logo_github.png"/></a>
+<a href="public_key_simon_masson.asc" title="Clé GPG"><img width=80 src="img/logo_gpg.png"/></a>
+<a href="https://fr.linkedin.com/in/simon-masson-74837889" title="LinkedIn"><img width=80 src="img/logo_linkedin.png"/></a>
+<a href="https://www.instagram.com/soimnmssaon/" title="Instagram"><img width=80 src="img/logo_instagram.png"/></a>
+<a href="https://www.facebook.com/soimn.mssaon" title="Facebook"><img width=80 src="img/logo_facebook.png"/></a>
+<a href="https://twitter.com/soimnmssaon" title="Twitter"><img width=80 src="img/logo_twitter.png"/></a>
 
 <hr>
 <h2>A partir de 2018</h2>
 <br>
 
-<table class="infos" style="border:1px black solid;"><tr><td><a href="http://" style="color:black;">Doctorat</a><br><a href="https://www.thalesgroup.com/"><img style="width:90%;" alt="inria" src="img/thales.jpg"/></a><br><a href="https://www.inria.fr/equipes/caramba"><img style="width:70%;" src="img/logo_inria.png" alt="inria"/></a><span style="font-size:.4em;"><br><br><i>Algorithmique des courbes destinées aux contextes de la cryptographie bilinéaire et post-quantique</i></span></td></tr></table>
+<table class="infos" style="border:1px black solid;"><tr><td>Doctorat<br><a href="https://www.thalesgroup.com/"><img style="width:90%;" alt="inria" src="img/thales.jpg"/></a><br><a href="https://www.inria.fr/equipes/caramba"><img style="width:70%;" src="img/logo_inria.png" alt="inria"/></a><span style="font-size:.4em;"><br><br><i>Algorithmique des courbes destinées aux contextes de la cryptographie bilinéaire et post-quantique</i></span></td></tr></table>
 
 <hr>
 
@@ -130,28 +134,40 @@ Voici quelques documents que j'ai rédigé :
 
 <h2>Photos</h2>
 
+<div class="image">
+<table style="border:1px black solid;" class="infos"><tr><td>Campus de Thales<br><br>Gennevilliers<br><br>2017</td></tr></table>
+<img class="photo" src="img/thales_campus.jpg" alt="thales_campus" width=300>
+</div>
 
+<div class="image">
 <table style="border:1px black solid;" class="infos"><tr><td>Campus de l'Université de Versailles<br><br>2017</td></tr></table>
-<a href="img/versailles.jpg" title="Cliquez pour agrandir"><img class="photo" src="img/versailles.jpg" alt="versailles" width=300></a>
+<img class="photo" src="img/versailles.jpg" alt="versailles" width=300>
+</div>
 
-<br>
+<div class="image">
+<table style="border:1px black solid;" class="infos"><tr><td>Rentrée des masters parisiens<br><br>IHES<br><br>2017</td></tr></table>
+<img class="photo" src="img/ihes.jpg" alt="ihes" width=300>
+</div>
 
-<table style="border:1px black solid;" class="infos"><tr><td>Rentrée à l'IHES<br><br><a href="https://www.fondation-hadamard.fr/fr/master-financements-bourses-de-master/appels-candidatures-pour-une-bourse-de-master">Bourse FMJH</a><br><br>09/2017</td></tr></table>
-<a href="img/ihes.jpg" title="Cliquez pour agrandir"><img class="photo" src="img/ihes.jpg" alt="ihes" width=300></a>
+<div class="image">
+<table style="border:1px black solid;" class="infos"><tr><td>Tour de Maths de l'IRMAR<br><br>Rennes<br><br>2016</td></tr></table>
+<img class="photo" src="img/irmar_tour.jpg" alt="irmar_tour" width=300>
+</div>
 
-<br>
+<div class="image">
+<table style="border:1px black solid;" class="infos"><tr><td>Campus de Beaulieu<br><br>Rennes<br><br>2015</td></tr></table>
+<img class="photo" src="img/beaulieu.jpg" alt="beaulieu" width=300>
+</div>
 
-
-<table style="border:1px black solid;" class="infos"><tr><td>Tour de Maths de Rennes<br><br>2016</td></tr></table>
-
-<a href="img/irmar_tour.jpg" title="Cliquez pour agrandir"><img class="photo" src="img/irmar_tour.jpg" alt="irmar_tour" width=300></a>
-
-<br>
-
+<div class="image">
 <table style="border:1px black solid;" class="infos"><tr><td>Vice-champion de France universitaire <br><br>2014</td></tr></table>
+<img class="photo" src="img/vb.jpg" alt="vb" width=300>
+</div>
 
-<a href="img/vb.jpg" title="Cliquez pour agrandir"><img class="photo" src="img/vb.jpg" alt="vb" width=300></a>
-
+<div class="image">
+<table style="border:1px black solid;" class="infos"><tr><td>Bibliothèque de l'Université de Nantes<br><br>2012</td></tr></table>
+<img class="photo" src="img/bibli_nantes.jpg" alt="BU_Nantes" width=300>
+</div>
 
 
 
