modifications in Photos section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <title>Simon Masson</title>
 <base target="_blank">
 <style>
+body {
+	background:rgb(253,253,253);
+}
 h1 {
 	margin:0;
 	font-size:3em;
