--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>Simon Masson</title>
 <base target="_blank">
+
+<link rel="icon" type="image/png" href="favicon.ico" />
+<!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="favicon.ico" /><![endif]-->
+
 <style>
 body {
 	background:rgb(253,253,253);
