--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Voici quelques documents que j'ai rédigé :
 <a href="https://twitter.com/soimnmssaon" title="Twitter"><img width=80 src="img/logo_twitter.png"/></a>
 
 <hr>
-<h2>A partir de 2018</h2>
+<h2>Actuellement</h2>
 <br>
 
 <table class="infos" style="border:1px black solid;"><tr><td>Doctorat<br><a href="https://www.thalesgroup.com/"><img style="width:90%;" alt="inria" src="img/thales.jpg"/></a><br><a href="https://www.inria.fr/equipes/caramba"><img style="width:70%;" src="img/logo_inria.png" alt="inria"/></a><span style="font-size:.4em;"><br><br><i>Algorithmique des courbes destinées aux contextes de la cryptographie bilinéaire et post-quantique</i></span></td></tr></table>
