--- a/index.html
+++ b/index.html
@@ -111,6 +111,7 @@ Voici quelques documents que j'ai rédigé :
 
 <table class="infos" style="border:1px black solid;"><tr><td>Doctorat<br><a href="https://www.thalesgroup.com/"><img style="width:90%;" alt="inria" src="img/thales.jpg"/></a><br><a href="https://www.inria.fr/equipes/caramba"><img style="width:70%;" src="img/logo_inria.png" alt="inria"/></a><span style="font-size:.4em;"><br><br><i>Algorithmique des courbes destinées aux contextes de la cryptographie bilinéaire et post-quantique</i></span></td></tr></table>
 
+<!--
 <hr>
 
 <h2>Précédemment</h2>
@@ -125,7 +126,7 @@ Voici quelques documents que j'ai rédigé :
 
 <h2>Documents</h2>
 <br>
-<!--<table class="infos" style="border:1px gray dashed;"><tr><td><b>Stage de M2</b><br><a href="https://www.thalesgroup.com/"><img style="width:90%;" alt="thales" src="img/thales.jpg"/></a><br>Méthode GLV en dimension <i>4</i> sur les <b>Q</b>-courbes</td></tr></table>-->
+<!--<table class="infos" style="border:1px gray dashed;"><tr><td><b>Stage de M2</b><br><a href="https://www.thalesgroup.com/"><img style="width:90%;" alt="thales" src="img/thales.jpg"/></a><br>Méthode GLV en dimension <i>4</i> sur les <b>Q</b>-courbes</td></tr></table>--><!--
 <a href="GLV.pdf"><table class="infos"><tr><td style="border:.2px black solid;">Projet de <b>C</b><br><img alt="gmp" style="width:50%;" src="img/gmp.png"/><br>sur les courbes elliptiques</td></tr></table></a>
 <a href="dev.pdf"><table class="infos"><tr><td style="border:.2px black solid;">Résultats développés pour l'agrégation externe<br><img alt="solids" style="width:60%;" src="img/solids.png"</td></tr></table></a>
 <table class="infos"><tr><td style="border:1px black solid;"><a href="stage_m1.pdf">Stage de recherche<span style="font-size:.5em;"><br><br>Introduction aux algèbres de Lie</a></span><br>
@@ -179,7 +180,7 @@ Voici quelques documents que j'ai rédigé :
 
 
 
-
+-->
 <hr>
 Les mathématiques sont une école d'apprentissage contre l'absolutisme de la pensée. <i>Denis Guedj</i>
 </body>
