--- a/index.html
+++ b/index.html
@@ -105,11 +105,17 @@ Voici quelques documents que j'ai rédigé :
 <a href="https://www.facebook.com/soimn.mssaon" title="Facebook"><img width=80 src="img/logo_facebook.png"/></a>
 <a href="https://twitter.com/soimnmssaon" title="Twitter"><img width=80 src="img/logo_twitter.png"/></a>
 
-<hr>
-<h2>Actuellement</h2>
 <br>
 
-<table class="infos" style="border:1px black solid;"><tr><td>Doctorat<br><a href="https://www.thalesgroup.com/"><img style="width:90%;" alt="inria" src="img/thales.jpg"/></a><br><a href="https://www.inria.fr/equipes/caramba"><img style="width:70%;" src="img/logo_inria.png" alt="inria"/></a><span style="font-size:.4em;"><br><br><i>Algorithmique des courbes destinées aux contextes de la cryptographie bilinéaire et post-quantique</i></span></td></tr></table>
+<table class="infos" style="border:1px black solid;"><tr><td>Doctorant<br><a href="https://www.thalesgroup.com/"><img style="width:90%;" alt="inria" src="img/thales.jpg"/></a><br><a href="https://www.inria.fr/equipes/caramba"><img style="width:70%;" src="img/logo_inria.png" alt="inria"/></a><span style="font-size:.4em;"><br><br><i>Algorithmique des courbes destinées aux contextes de la cryptographie bilinéaire et post-quantique</i></span></td></tr></table>
+
+<br>
+
+<table><tr><td style="width:auto; height:auto; text-align:left;">
+<a href="efficient_GLV.pdf"><img src="img/evince.png" style="width:.8em;vertical-align:bottom;"></a> Efficient four-dimensional GLV curve with high security<br>
+<a href="stage_m2.pdf"><img src="img/evince.png" style="width:.8em;vertical-align:bottom;"></a> Méthode GLV en dimension 4 sur des Q-courbes<br>
+<a href="dev.pdf"><img src="img/evince.png" style="width:.8em;vertical-align:bottom;"></a> Résultats développés pour l'agrégation externe
+</td></tr></table>
 
 <!--
 <hr>
