--- a/index.html
+++ b/index.html
@@ -1,63 +1,70 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+
+
+<div id="page">
+
 <h1>Simon Masson</h1>
 
-CV
+<a href="">cv</a>, <a href="mailto:simon.masson@protonmail.com">mail</a><br><br>
 
-email
+Welcome to my webpage!<br>
+I am a research scientist, interested in maths, physics, and computer science.
+I focus on real-world applications of the theory of mathematics.
+In particular, I like to investigate secure communication and acoustics.
 
+<h2>Cryptography</h2>
+I got a PhD from Université de Lorraine and Thales in 2021 (<a href="">doc</a>).
+I was supervised by Aurore and Emmanuel.
+I work mainly with public-key cryptography based on elliptic curves:
+classic elliptic curve cryptography, pairing-based cryptography, and isogeny-based post-quantum cryptography.<br>
 
-<h2>PhD</h2>
+Projects I have been working on:
+<ul>
+    <li>
+        Chains of elliptic curves for ZK proofs:
+        <a href="https://ia.cr/2021/1152">Bandersnatch</a> with <a href="https://x.com/asanso">Antonio</a> and <a href="">Zhenfei</a>,
+        a <a href="https://ia.cr/2024/1737">work</a> on generalizing it with <a href="">Aurore</a> (2024).
+    </li>
+    <li>
+        Verifiable delay functions based on isogenies and pairings:
+        the <a href="https://ia.cr/2019/166">paper</a> written with <a href="https://x.com/asanso">Antonio</a> and <a href="https://defeo.lu">Luca</a>,
+        and the open-source <a href="https://github.com/isogenies-vdf/isogenies-vdf-sage">implementation</a> (2019).
+    </li>
+    <li>
+        Pairing-friendly curves with embedding degree between five and eight:
+        the <a href="https://ia.cr/2019/431">paper</a> with <a href="">Aurore</a> and <a href="https://members.loria.fr/EThome/">Emmanuel</a> (2019).
+    </li>
+</ul>
 
-Algorithmic of curves in the context of bilinear and post-quantum cryptography
+<h2>Acoustics</h2>
+In parallel with cryptography, I got a master in acoustics in 2024.
+I graduated from the master <a href="">WAVES</a>, an Erasmus Mundus master program between
+Universidade de Coimbra,
+Universitat Politècnica de València,
+Aix-Marseille Université, and École Centrale Méditerrannée.
+<ul>
+    <li>
+        A project about simulating clarinet sounds from the mouth-piece non-linear equations,
+        supervised by <a href="https://laboratoire-mecanique-acoustique.fr/en/member/320-tom-colinot">Tom</a>, <a href="http://www.lma.cnrs-mrs.fr/spip/spip.php?auteur432&lang=fr">Nathan</a> and <a href="http://www.lma.cnrs-mrs.fr/spip/spip.php?auteur11">Christophe</a> (2023).
+    </li>
+    <li>
+        My <a href="">master thesis</a> about characterizing the seabed sediment using a broadband frequency echosounder,
+        supervised by <a href="https://scholar.google.es/citations?user=78X32dMAAAAJ&hl=en">Noela</a>, <a href="https://www.uned.es/universidad/docentes/en/ciencias/daniel-rodriguez-perez.html">Daniel</a> and <a href="https://www.upv.es/ficha-personal/VESPINOS">Víctor</a> (2024).
+    </li>
+</ul> 
 
-Advisors: Emmanuel Thomé, Aurore Guillevic
+<h2>More</h2>
 
-Location: Thales (Gennevilliers) and Caramba team (Nancy)
+I have been working on several interdisciplinary projects in my free time.
+Feel free to contact me if you are interested, by <a href="">mail</a>.
 
-Manuscript, slides.
+</div>
 
-<h2>Publications</h2>
-
-    Cocks-Pinch curves of embedding degrees five to eight and optimal ate pairing computation (eprint)
-    with Aurore Guillevic and Emmanuel Thomé (Designs, Codes and Cryptography).
-
-    Verifiable delay functions from supersingular isogenies and pairings (eprint)
-    with Luca De Feo, Christophe Petit and Antonion Sanso (Asiacrypt 2019).
-
-    Efficient four-dimensional GLV curve with high security (eprint)
-    with Olivier Bernard and Renaud Dubois.
-
-
-<h2>Talks</h2>
-
-    2020/11/02 Journées C2, online
-    Verifiable delay functions from supersingular isogenies and pairings.
-
-    2019/12/09 Asiacrypt conference, Kobe
-    Verifiable delay functions from supersingular isogenies and pairings.
-
-    2019/07/04 Séminaire CARAMBA, Nancy
-    Verifiable delay functions from supersingular isogenies and pairings.
-
-    2019/06/21 Séminaire de cryptographie, Rennes
-    Cocks–Pinch curves of embedding degrees five to eight and ate pairing computation.
-
-    2018/12/11 Séminaire CRYPTO, Versailles
-    Cocks–Pinch curves of embedding degrees five to eight and ate pairing computation.
-
-    2018/10/09 Journées C2, Aussois
-    Cocks-Pinch curves of embedding degrees five to eight and ate pairing computation.
-
-    2017/09/20 Séminaire GRACE, Polytechnique
-    Méthode GLV en dimension 4 sur les Q-courbes.
-
-<h2>Teaching</h2>
-
-    2019-2020
-    Informatique 1
-    L1 CPUGE - Université Paris Diderot
-
-    2018-2019
-    Introduction à la programmation 2
-    L1 Informatique - Université Paris Diderot
-
-
+</body>
+</html> 
