fix names and shorter acoustic section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ In particular, I like to investigate secure communication and acoustics.
 
 <h2>Cryptography</h2>
 I got a PhD from Université de Lorraine and Thales in 2021 (<a href="">doc</a>).
-I was supervised by Aurore and Emmanuel.
+I was supervised by <a href="">Aurore Guillevic</a> and <a href="https://members.loria.fr/EThome/">Emmanuel Thomé</a>.
 I work mainly with public-key cryptography based on elliptic curves:
 classic elliptic curve cryptography, pairing-based cryptography, and isogeny-based post-quantum cryptography.<br>
 
@@ -28,17 +28,17 @@ Projects I have been working on:
 <ul>
     <li>
         Chains of elliptic curves for ZK proofs:
-        <a href="https://ia.cr/2021/1152">Bandersnatch</a> with <a href="https://x.com/asanso">Antonio</a> and <a href="">Zhenfei</a>,
-        a <a href="https://ia.cr/2024/1737">work</a> on generalizing it with <a href="">Aurore</a> (2024).
+        <a href="https://ia.cr/2021/1152">Bandersnatch</a> with <a href="https://x.com/asanso">Antonio Sanso</a> and <a href="">Zhenfei Zhang</a>,
+        a <a href="https://ia.cr/2024/1737">work</a> on generalizing it with <a href="">Aurore Guillevic</a> (2024).
     </li>
     <li>
         Verifiable delay functions based on isogenies and pairings:
-        the <a href="https://ia.cr/2019/166">paper</a> written with <a href="https://x.com/asanso">Antonio</a> and <a href="https://defeo.lu">Luca</a>,
+        the <a href="https://ia.cr/2019/166">paper</a> written with <a href="https://x.com/asanso">Antonio Sanso</a> and <a href="https://defeo.lu">Luca De Feo</a>,
         and the open-source <a href="https://github.com/isogenies-vdf/isogenies-vdf-sage">implementation</a> (2019).
     </li>
     <li>
         Pairing-friendly curves with embedding degree between five and eight:
-        the <a href="https://ia.cr/2019/431">paper</a> with <a href="">Aurore</a> and <a href="https://members.loria.fr/EThome/">Emmanuel</a> (2019).
+        the <a href="https://ia.cr/2019/431">paper</a> with <a href="">Aurore Guillevic</a> and <a href="https://members.loria.fr/EThome/">Emmanuel Thomé</a> (2019).
     </li>
 </ul>
 
@@ -48,21 +48,14 @@ I graduated from the master <a href="">WAVES</a>, an Erasmus Mundus master progr
 Universidade de Coimbra,
 Universitat Politècnica de València,
 Aix-Marseille Université, and École Centrale Méditerrannée.
-<ul>
-    <li>
-        A project about simulating clarinet sounds from the mouth-piece non-linear equations,
-        supervised by <a href="https://laboratoire-mecanique-acoustique.fr/en/member/320-tom-colinot">Tom</a>, <a href="http://www.lma.cnrs-mrs.fr/spip/spip.php?auteur432&lang=fr">Nathan</a> and <a href="http://www.lma.cnrs-mrs.fr/spip/spip.php?auteur11">Christophe</a> (2023).
-    </li>
-    <li>
-        My <a href="">master thesis</a> about characterizing the seabed sediment using a broadband frequency echosounder,
-        supervised by <a href="https://scholar.google.es/citations?user=78X32dMAAAAJ&hl=en">Noela</a>, <a href="https://www.uned.es/universidad/docentes/en/ciencias/daniel-rodriguez-perez.html">Daniel</a> and <a href="https://www.upv.es/ficha-personal/VESPINOS">Víctor</a> (2024).
-    </li>
-</ul> 
+During these two years, I enjoyed implementing wave equation in Matlab. In particular, I worked on simulating clarinet sounds from the mechanical system of the mouth piece.
+I wrote my <a href="">master thesis</a> about characterizing the seabed sediment using a broadband frequency echosounder.
+I was supervised by <a href="https://scholar.google.es/citations?user=78X32dMAAAAJ&hl=en">Noela Sanchez</a>, <a href="https://www.uned.es/universidad/docentes/en/ciencias/daniel-rodriguez-perez.html">Daniel Pérez</a> and <a href="https://www.upv.es/ficha-personal/VESPINOS">Víctor Espinosa</a> (2024).
 
 <h2>More</h2>
 
 I have been working on several interdisciplinary projects in my free time.
-Feel free to contact me if you are interested, by <a href="">mail</a>.
+Feel free to contact me if you are interested, by <a href="mailto:simon.masson@protonmail.com">mail</a>.
 
 </div>
 
