minor change last sentence

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@ I was supervised by <a href="https://scholar.google.es/citations?user=78X32dMAAA
 <h2>More</h2>
 
 I have been working on several interdisciplinary projects in my free time.
-Feel free to contact me if you are interested, by <a href="mailto:simon.masson@protonmail.com">mail</a>.
+Feel free to contact me by <a href="mailto:simon.masson@protonmail.com">mail</a> if you are interested.
 
 </div>
 
