commented part of the page

--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 
 <h1>Simon Masson</h1>
 
+I am a cryptography engineer working at zknox.<br>
+I am currently working on post-quantum signature integration for Ethereum.<br>
 <a href="">cv</a>, <a href="mailto:simon.masson@protonmail.com">mail</a><br><br>
 
-Welcome to my webpage!<br>
+<!-- Welcome to my webpage!<br>
 I am a research scientist, interested in maths, physics, and computer science.
 I focus on real-world applications of the theory of mathematics.
 In particular, I like to investigate secure communication and acoustics.
@@ -55,7 +57,7 @@ I was supervised by <a href="https://scholar.google.es/citations?user=78X32dMAAA
 <h2>More</h2>
 
 I have been working on several interdisciplinary projects in my free time.
-Feel free to contact me by <a href="mailto:simon.masson@protonmail.com">mail</a> if you are interested.
+Feel free to contact me by <a href="mailto:simon.masson@protonmail.com">mail</a> if you are interested. -->
 
 </div>
 
