--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 I am a cryptography engineer working at zknox.<br>
 I am currently working on post-quantum signature integration for Ethereum.<br>
-<a href="">cv</a>, <a href="mailto:simon.masson@protonmail.com">mail</a><br><br>
+<a href="cv.pdf">cv</a>, <a href="mailto:simon.masson@protonmail.com">mail</a><br><br>
 
 <!-- Welcome to my webpage!<br>
 I am a research scientist, interested in maths, physics, and computer science.
