--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
 <h1>Simon Masson</h1>
 
-I am a cryptography engineer working at zknox.<br>
-I am currently working on post-quantum signature integration for Ethereum.<br>
+I am a cryptography engineer working at <a hrf="zknox.eth.limo">ZKNox</a>.<br><br>
+I am currently working on post-quantum signature integration for Ethereum.<br><br>
 <a href="cv.pdf">cv</a>, <a href="mailto:simon.masson@protonmail.com">mail</a><br><br>
 
 <!-- Welcome to my webpage!<br>
