--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 
-<div id="page">
+    <div id="page">
 
-<h1>Simon Masson</h1>
+        <h1>Simon Masson</h1>
 
-I am a cryptography engineer working at <a hrf="zknox.eth.limo">ZKNox</a>.<br><br>
-I am currently working on post-quantum signature integration for Ethereum.<br><br>
-<a href="cv.pdf">cv</a>, <a href="mailto:simon.masson@protonmail.com">mail</a><br><br>
+        I am a cryptography engineer working at <a hrf="zknox.eth.limo">ZKNox</a>.<br><br>
+        I am currently working on zero-knowledge proofs and post-quantum signature integration in Ethereum.<br><br>
+        <a href="cv.pdf">cv</a>, <a href="mailto:simon.masson@protonmail.com">mail</a><br><br>
 
-<!-- Welcome to my webpage!<br>
+        <!-- Welcome to my webpage!<br>
 I am a research scientist, interested in maths, physics, and computer science.
 I focus on real-world applications of the theory of mathematics.
 In particular, I like to investigate secure communication and acoustics.
@@ -59,7 +60,8 @@ I was supervised by <a href="https://scholar.google.es/citations?user=78X32dMAAA
 I have been working on several interdisciplinary projects in my free time.
 Feel free to contact me by <a href="mailto:simon.masson@protonmail.com">mail</a> if you are interested. -->
 
-</div>
+    </div>
 
 </body>
-</html> 
+
+</html>
