--- a/index.html
+++ b/index.html
@@ -60,6 +60,12 @@ I was supervised by <a href="https://scholar.google.es/citations?user=78X32dMAAA
 I have been working on several interdisciplinary projects in my free time.
 Feel free to contact me by <a href="mailto:simon.masson@protonmail.com">mail</a> if you are interested. -->
 
+        <br>
+
+        <br>
+
+        <span style='text-color:green'>#</span>
+        <blink>_</blink>
     </div>
 
 </body>
