--- a/index.html
+++ b/index.html
@@ -64,8 +64,11 @@ Feel free to contact me by <a href="mailto:simon.masson@protonmail.com">mail</a>
 
         <br>
 
-        <span style='text-color:green'>#</span>
-        <blink>_</blink>
+        <span style="color:green">root@maison</span>:<span style="color:cornflowerblue">/#</span>
+        <div
+            style="display:inline-block;width: 0.6em;height: 1em;background-color: white;animation: blink 1s infinite;">
+            _
+        </div>
     </div>
 
 </body>
