fix broken link

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
         <h1>Simon Masson</h1>
 
-        I am a cryptography engineer working at <a href="zknox.eth.limo">ZKNox</a>.<br><br>
+        I am a cryptography engineer working at <a href="https://zknox.eth.limo">ZKNox</a>.<br><br>
         I am currently working on zero-knowledge proofs and post-quantum signature integration in Ethereum.<br><br>
         <a href="cv.pdf">cv</a>, <a href="mailto:simon.masson@protonmail.com">mail</a><br><br>
 
